<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.voteridreg.VoterIDRegActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/registraionBtnLayout"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_20">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_20"
                android:hint="@string/first_name"
                style="@style/TextInputLayoutTheme"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstNameEtx"
                    style="@style/TextInputEditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_20"
                android:hint="@string/last_name"
                style="@style/TextInputLayoutTheme"
                app:layout_constraintTop_toBottomOf="@id/firstNameLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastNameEtx"
                    style="@style/TextInputEditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dobLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_20"
                android:hint="@string/dob"
                style="@style/TextInputLayoutTheme"
                app:layout_constraintTop_toBottomOf="@id/lastNameLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dobEtx"
                    style="@style/TextInputEditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="date"
                    android:editable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    tools:ignore="Deprecated" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mobileNumberLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_20"
                android:hint="@string/mobile_number"
                style="@style/TextInputLayoutTheme"
                app:layout_constraintTop_toBottomOf="@id/dobLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mobileNumberEtx"
                    style="@style/TextInputEditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="phone"
                    android:maxLength="10" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_20"
                android:hint="@string/email"
                style="@style/TextInputLayoutTheme"
                app:layout_constraintTop_toBottomOf="@id/mobileNumberLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEtx"
                    style="@style/TextInputEditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addressLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_20"
                android:hint="@string/address"
                style="@style/TextInputLayoutTheme"
                app:layout_constraintTop_toBottomOf="@id/emailLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addressEtx"
                    style="@style/TextInputEditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="3" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/talukLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_20"
                android:hint="@string/taluk"
                style="@style/TextInputLayoutTheme"
                app:layout_constraintTop_toBottomOf="@id/addressLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/talukEtx"
                    style="@style/TextInputEditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/districtLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_20"
                android:hint="@string/district"
                style="@style/TextInputLayoutTheme"
                app:layout_constraintTop_toBottomOf="@id/talukLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/districtEtx"
                    style="@style/TextInputEditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/stateLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_20"
                android:hint="@string/state"
                style="@style/TextInputLayoutTheme"
                app:layout_constraintTop_toBottomOf="@id/districtLayout"
                app:layout_constraintBottom_toBottomOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/stateEtx"
                    style="@style/TextInputEditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/registraionBtnLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/regVoterBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_10"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>