<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.userregistration.RegistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_20">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_80"
                android:hint="@string/first_name"
                style="@style/TextInputLayoutTheme"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstNameEtx"
                    style="@style/TextInputEditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_20"
                android:hint="@string/last_name"
                style="@style/TextInputLayoutTheme"
                app:layout_constraintTop_toBottomOf="@id/firstNameLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastNameEtx"
                    style="@style/TextInputEditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_20"
                android:hint="@string/email"
                style="@style/TextInputLayoutTheme"
                app:layout_constraintTop_toBottomOf="@id/lastNameLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEtx"
                    style="@style/TextInputEditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_20"
                app:passwordToggleEnabled="true"
                android:hint="@string/password"
                style="@style/TextInputLayoutTheme"
                app:layout_constraintTop_toBottomOf="@id/emailLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pwdEtx"
                    style="@style/TextInputEditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPwdLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_20"
                app:passwordToggleEnabled="true"
                android:hint="@string/con_password"
                style="@style/TextInputLayoutTheme"
                app:layout_constraintTop_toBottomOf="@id/passwordLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmPwdEtx"
                    style="@style/TextInputEditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/submitBtn"
                android:layout_width="@dimen/margin_240"
                android:layout_height="@dimen/margin_50"
                android:layout_marginTop="@dimen/margin_40"
                android:text="@string/submit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/confirmPwdLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>