<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashBoardActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_voter_registration_system"
        style="@style/TitleStyle"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/margin_40"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/margin_150"
            android:layout_height="@dimen/margin_150"
            android:layout_margin="@dimen/margin_15"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="@dimen/margin_15"
            app:cardElevation="0dp"
            tools:ignore="MissingConstraints">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/voterIDCount"
                    style="@style/SubtitleStyleWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/voterIDCountLabel"
                    style="@style/NormalTextStyleWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/margin_5"
                    android:text="@string/total_voter_count" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/margin_150"
            android:layout_height="@dimen/margin_150"
            android:layout_margin="@dimen/margin_15"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="@dimen/margin_15"
            app:cardElevation="0dp"
            tools:ignore="MissingConstraints">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/todayRegisterCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/SubtitleStyleWhite"/>
                    <TextView
                        android:id="@+id/todayRegisterCountLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/today_voter_count"
                        android:gravity="center"
                        style="@style/NormalTextStyleWhite"
                        android:layout_marginTop="@dimen/margin_5"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/addVoterFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/register_a_voter"
        android:text="@string/register_a_voter"
        app:icon="@android:drawable/ic_input_add"
        android:layout_margin="@dimen/margin_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:iconTint="@color/white"
        style="@style/CustomFloatingActionButton"/>

    <TextView
        android:id="@+id/logoutTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_20"
        android:text="@string/logout"
        style="@style/SubtitleStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>